# qilang

./: .gitignore  CMakeLists.txt  README.rst  README.txt  conanfile.py  package.xml  project.json  qilang-tools-config.cmake  qiproject.xml
.github/workflows/: continuous.yml  make_feed.sh  release.yml
cmake/: config.cmake.in  qilang-tools-config.cmake
cpp/qilangservice/: CMakeLists.txt  qiproject.xml
cpp/qilangservice/@projectname@/: @projectname@.idl.qi  api.hpp
cpp/qilangservice/src/: @projectname@impl.cpp
doc/: Makefile
doc/source/: conf.py  index.rst  qilangtype.rst
misc/: qi-mode.el
qilang/: api.hpp  docparser.hpp  formatter.hpp  gencodeutility.hpp.in  node.hpp  node.idl.qi  packagemanager.hpp  parser.hpp  pathformatter.hpp  qilang.idl.qi  visitor.hpp
samples/pimpl/: CMakeLists.txt  bar.cpp  barimpl.cpp  gen.sh  qiproject.xml  test.cpp
samples/pimpl/pimpl/: api.hpp  bar.hpp  bar.idl.qi  foo.idl.qi
samples/pimpl/src/: bar.cpp  barimpl.cpp
samples/pimpl/titi/: api.hpp  titi.idl.qi
samples/test/: CMakeLists.txt  README.txt  client.cpp  qiproject.xml  server.cpp
samples/test/share/qi/idl/test/: test.idl.qi
samples/test/src/: testimpl.cpp
samples/test/test/: api.hpp
src/: codegen.cpp  cpptype.cpp  cpptype.hpp  cpptype.hxx  docparser.cpp  format_anyvalue.cpp  format_cpp_bind.cpp  format_cpp_gmock.cpp  format_cpp_interface.cpp  format_cpp_local.cpp  format_cpp_remote.cpp  format_cppi.cpp  format_cppl.cpp  format_cppp.cpp  format_cppr.cpp  format_doc.cpp  format_qilang.cpp  format_sexpr.cpp  formatter.cpp  formatter_p.hpp  genobject.cpp  grammar.y  node.cpp  packagemanager.cpp  parser.cpp  parser_p.hpp  pathformatter.cpp  qic_main.cpp  qilang_metaobject.cpp  qilang_signature.cpp  qirtidl_main.cpp  token.l
templates/service-cpp/: CMakeLists.txt  qiproject.xml
templates/service-cpp/@projectname@/: @projectname@.idl.qi
templates/service-cpp/src/: @projectname@_module.cpp  @projectname@impl.hpp
tests/: CMakeLists.txt  cond.qi  error.qi  generic.qi  graph.qi  graph2.qi  graph3.qi  graph4.qi  graph5.qi  iface.qi  iface2.qi  iface3.qi  test.qi  test_qilang.cpp  test_qilang.hpp  test_qilang_enum_include.cpp  test_qilang_function.cpp  test_qilang_gencodeutility.cpp  test_qilang_gmock.cpp  test_qilang_import.cpp  test_qilang_package.cpp  test_qilang_property.cpp  test_qilang_qisubpackage.cpp  test_qilang_raw.cpp  test_qilang_signal.cpp  test_qilang_signature.cpp  test_qilang_struct.cpp  test_qilang_struct_include.cpp  test_qilang_test_utils.hpp  test_qilang_time.cpp  test_qilang_type_registration.cpp  test_signature.cpp
tests/enums/: enums.qi
tests/errors/: pkg1.qi  pkg2.qi
tests/qi/subpackage/: api.hpp  mix.idl.qi
tests/share/qi/idl/testimportpackage/: importfromsubpackage.idl.qi
tests/share/qi/idl/testqilang/: buffy.idl.qi  someenums.idl.qi  someinterfaces.idl.qi  someproperties.idl.qi  somestructs.idl.qi  time.idl.qi
tests/share/qi/idl/testsubpackage/othersubpackage/: localimport.idl.qi  othersubpackage.idl.qi
tests/src/: anotherinterfaceimpl.hpp  bradpitt.hpp  buffy.hpp  kindamanagerimpl.hpp  ouroboros.hpp  pingpong.hpp  propertymaster.hpp  registration.cpp  signalmaster.hpp  time.hpp  truthseeker.hpp
tests/src/qi/subpackage/: api.hpp  mix.cpp  mix.hpp
tests/testimportpackage/: api.hpp  testimportpackage.idl.qi
tests/testqilang/: api.hpp  someinterfaces.idl.qi  somemix.idl.qi  someproperties.idl.qi  somesignals.idl.qi  somestructs.idl.qi  testinterface.idl.qi
tests/testsubpackage/othersubpackage/: api.hpp  othersubpackage.idl.qi
v2/: CMakeLists.txt  qiproject.xml
v2/qilang2/: api.hpp  node.idl.qi
v2/src/: main.cpp  nodeimpl.cpp
